# wasupdate

./: Cargo.toml  README.md  justfile
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: install.rs  lib.rs  print.rs  rhai.rs  utilities.rs
